--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -43,34 +43,32 @@ jobs:
     steps:
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
-      with:
-        tag_name: v1.0.0 # You can dynamically set this based on versioning
-        release_name: Release v1.0.0 # You can dynamically set this based on versioning
-        draft: false
-        prerelease: false
+      run: |
+        release=$(curl -X POST -s -H "Authorization: token ${{ secrets.GITHUBTOKEN }}" -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/gani-23/DynamicLocalisation/releases -d '{"tag_name": "v1.0.0","name": "Release v1.0.0","draft": false,"prerelease": false}')
+        echo "::set-output name=release_id::$(echo "$release" | jq -r '.id')"
+        echo "::set-output name=upload_url::$(echo "$release" | jq -r '.upload_url')"
+      shell: bash
 
   upload_release:
     needs: create_release
     runs-on: ubuntu-latest
 
     steps:
-    - name: Upload Release Artifact
-      id: upload_release_asset
-      uses: actions/upload-release-asset@v1
+    - name: Upload x64 Artifact
+      run: |
+        gh release upload ${{ steps.create_release.outputs.release_id }} ./releases/x64/app_release_x64.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./releases
-        asset_name: app_release.zip
-        asset_content_type: application/zip
+
+    - name: Upload x86 Artifact
+      run: |
+        gh release upload ${{ steps.create_release.outputs.release_id }} ./releases/x86/app_release_x86.zip
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
 
   cleanup:
     runs-on: ubuntu-latest
-    needs: upload_release
+    needs: [upload_release]
     steps:
     - name: Cleanup
       run: rm -rf ./releases
