--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -6,9 +6,9 @@ on:
       - main
 
 jobs:
+
   build_and_release:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
@@ -19,7 +19,7 @@ jobs:
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '6.x' # .NET 6.0 version
+        dotnet-version: '6.x'
 
     - name: Restore Dependencies
       run: dotnet restore Localisation/Localisation.csproj
@@ -30,7 +30,7 @@ jobs:
     - name: Build Application x86
       run: dotnet build --configuration Release --runtime win-x86 --output ./releases/x86 Localisation/Localisation.csproj
 
-    - name: Publish Release Artifact
+    - name: Upload Artifacts
       uses: actions/upload-artifact@v2
       with:
         name: app_release
@@ -39,36 +39,50 @@ jobs:
   create_release:
     needs: build_and_release
     runs-on: ubuntu-latest
-
     steps:
     - name: Create Release
       id: create_release
-      run: |
-        release=$(curl -X POST -s -H "Authorization: token ${{ secrets.GITHUBTOKEN }}" -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/gani-23/DynamicLocalisation/releases -d '{"tag_name": "v1.0.0","name": "Release v1.0.0","draft": false,"prerelease": false}')
-        echo "::set-output name=release_id::$(echo "$release" | jq -r '.id')"
-        echo "::set-output name=upload_url::$(echo "$release" | jq -r '.upload_url')"
-      shell: bash
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
+      with:
+        tag_name: v1.0.0
+        release_name: Release v1.0.0
+        draft: false
+        prerelease: false
 
   upload_release:
     needs: create_release
     runs-on: ubuntu-latest
-
     steps:
+    - name: Download Artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: app_release
+
     - name: Upload x64 Artifact
-      run: |
-        gh release upload ${{ steps.create_release.outputs.release_id }} ./releases/x64/app_release_x64.zip
+      uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./app_release/x64/app_release_x64.zip
+        asset_name: app_release_x64.zip
+        asset_content_type: application/zip
 
     - name: Upload x86 Artifact
-      run: |
-        gh release upload ${{ steps.create_release.outputs.release_id }} ./releases/x86/app_release_x86.zip
+      uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./app_release/x86/app_release_x86.zip
+        asset_name: app_release_x86.zip
+        asset_content_type: application/zip
 
   cleanup:
-    runs-on: ubuntu-latest
     needs: [upload_release]
+    runs-on: ubuntu-latest
     steps:
     - name: Cleanup
       run: rm -rf ./releases
