--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -36,17 +36,24 @@ jobs:
   create_release:
     needs: build_and_release
     runs-on: ubuntu-latest
+    outputs:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
+      uses: actions/github-script@v6
       with:
-        tag_name: v1.0.0
-        release_name: Release v1.0.0
-        draft: false
-        prerelease: false
+        github-token: ${{ secrets.GITHUBTOKEN }}
+        script: |
+          const release = await github.repos.createRelease({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            tag_name: 'v1.0.0',
+            name: 'Release v1.0.0',
+            draft: false,
+            prerelease: false,
+          });
+          core.setOutput('upload_url', release.data.upload_url);
 
   upload_release:
     needs: create_release
@@ -65,7 +72,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        upload_url: ${{ needs.create_release.outputs.upload_url }}
         asset_path: ./app_release/x64/app_release_x64.zip
         asset_name: app_release_x64.zip
         asset_content_type: application/zip
@@ -75,7 +82,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        upload_url: ${{ needs.create_release.outputs.upload_url }}
         asset_path: ./app_release/x86/app_release_x86.zip
         asset_name: app_release_x86.zip
         asset_content_type: application/zip
