--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -45,7 +45,7 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUBTOKEN }}
         script: |
-          const release = await github.repos.createRelease({
+          const { data } = await github.rest.repos.createRelease({
             owner: context.repo.owner,
             repo: context.repo.repo,
             tag_name: 'v1.0.0',
@@ -53,7 +53,7 @@ jobs:
             draft: false,
             prerelease: false,
           });
-          core.setOutput('upload_url', release.data.upload_url);
+          core.setOutput('upload_url', data.upload_url);
 
   upload_release:
     needs: create_release
